helm/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nginx
spec:
  selector:
    istio: ingressgateway # use the default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: http
    hosts:
    - "api.cloudcon.com"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts:
  - "api.cloudcon.com"
  gateways:
  - nginx
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 80
